決勝トーナメント進出チーム登録

--- a/app/views/part_two_predicts/overlook.html.erb
+++ b/app/views/part_two_predicts/overlook.html.erb
@@ -30,8 +30,8 @@
           <td></td>
           <td style="text-align:center;"><i class="icon-star"></i></td>
           <td></td>
-          <td></td>
-          <td></td>
+          <td style="text-align:center;"><i class="icon-star"></i></td>
+          <td style="text-align:center;"><i class="icon-star"></i></td>
           <td></td>
           <td></td>
           <td></td>
