--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
                 <ul class="dropdown-menu" id="swatch-menu">
                   <li><%= link_to 'パート１：予選リーグ', overlook_part_one_predicts_path %></li>
                   <li><%= link_to 'パート２：決勝トーナメント進出', overlook_part_two_predicts_path %></li>
-                  <li><%= link_to 'パート３：優勝・準優勝・３位', '', :onclick => 'alert("近日開設！")' %></li>
+                  <li><%= link_to 'パート３：優勝・準優勝・３位', overlook_part_three_predicts_path %></li>
                 </ul>
               </li>
               <li><%= link_to '３ちゃんねる', information_index_path %></li>
