--- a/app/views/part_three_predicts/overlook.html.erb
+++ b/app/views/part_three_predicts/overlook.html.erb
@@ -18,7 +18,9 @@
           <td></td>
           <% @users.each do |user| %>
             <td style="text-align:center; border-left: solid 1px #ddd;">
-              <img src="../img/<%=user.part_three_predict.team_a%>.jpg" style="width:60px;height:40px;">
+              <% if user.part_three_predict.team_a != "" %>
+                <img src="../img/<%=user.part_three_predict.team_a%>.jpg" style="width:60px;height:40px;">
+              <% end %>
             </td>
           <% end %>
         </tr>
@@ -27,7 +29,9 @@
           <td></td>
           <% @users.each do |user| %>
             <td style="text-align:center; border-left: solid 1px #ddd;">
-              <img src="../img/<%=user.part_three_predict.team_b%>.jpg" style="width:60px;height:40px;">
+              <% if user.part_three_predict.team_b != "" %>
+                <img src="../img/<%=user.part_three_predict.team_b%>.jpg" style="width:60px;height:40px;">
+              <% end %>
             </td>
           <% end %>
         </tr>
@@ -36,7 +40,9 @@
           <td></td>
           <% @users.each do |user| %>
             <td style="text-align:center; border-left: solid 1px #ddd;">
-              <img src="../img/<%=user.part_three_predict.team_c%>.jpg" style="width:60px;height:40px;">
+              <% if user.part_three_predict.team_c != "" %>
+                <img src="../img/<%=user.part_three_predict.team_c%>.jpg" style="width:60px;height:40px;">
+              <% end %>
             </td>
           <% end %>
         </tr>
