--- a/app/views/part_three_predicts/_form.html.erb
+++ b/app/views/part_three_predicts/_form.html.erb
@@ -22,26 +22,61 @@
 
   <div class="row">
     <div class="span12">
-      <h2>予想パート３　優勝・準優勝・３位を予想せよ</h2>
+      <h2>予想パート３　決勝トーナメントを予想せよ</h2>
     </div>
   </div>
   <div class="row">
     <div class="span12">
-      <h3>優勝</h3>
-      <div class="field">
-        <%= f.select :team_a, @options, {} %>
-      </div>
-
-      <h3>準優勝</h3>
-      <div class="field">
-        <%= f.select :team_b, @options, {} %>
-      </div>
-
-      <h3>３位</h3>
-      <div class="field">
-        <%= f.select :team_c, @options, {} %>
-      </div>
       <br/>
+      <h3>準決勝 第一戦</h3>
+      <h3>
+        <img src="../../img/brazil.jpg" style="width:60px;height:40px;">&nbsp;ブラジル
+        <%= f.number_field :score_a, :style => "width:80px;" %>&nbsp;ー&nbsp;
+        <%= f.number_field :score_b, :style => "width:80px;" %>
+        ウルグアイ&nbsp;<img src="../../img/uruguay.jpg" style="width:60px;height:40px;">
+      </h3>
+      <br/>
+
+      <h3>準決勝 第二戦</h3>
+      <h3>
+        <img src="../../img/spain.jpg" style="width:60px;height:40px;">&nbsp;スペイン
+        <%= f.number_field :score_c, :style => "width:80px;" %>&nbsp;ー&nbsp;
+        <%= f.number_field :score_d, :style => "width:80px;" %>
+        イタリア&nbsp;<img src="../../img/italia.jpg" style="width:60px;height:40px;">
+      </h3>
+      <br/>
+
+      <h3>決勝戦</h3>
+      <h3>
+        　　　
+        <img src="../../img/idontknow.jpg" style="width:60px;height:40px;">&nbsp;？？？
+        <%= f.number_field :score_e, :style => "width:80px;", :disabled => true %>&nbsp;ー&nbsp;
+        <%= f.number_field :score_f, :style => "width:80px;", :disabled => true %>
+        ？？？&nbsp;<img src="../../img/idontknow.jpg" style="width:60px;height:40px;">
+        　　　
+      </h3>
+      <br/>
+
+      <table>
+        <tr>
+          <td><h3>優勝</h3></td>
+          <td><h3>準優勝</h3></td>
+          <td><h3>３位</h3></td>
+        </tr>
+        <tr>
+          <td>
+            <%= f.select :team_a, @options, {} %>
+          </td>
+          <td>
+            <%= f.select :team_b, @options, {} %>
+          </td>
+          <td>
+            <%= f.select :team_c, @options, {} %>
+          </td>
+        </tr>
+      </table>
+      <br/>
+
       <div class="field">
         <%= f.submit 'これで勝負する！', :class => 'btn btn-info' %>
       </div>
