--- a/app/views/part_three_predicts/overlook.html.erb
+++ b/app/views/part_three_predicts/overlook.html.erb
@@ -1,7 +1,74 @@
-<h2>みんなの予想（優勝・準優勝・３位）</h2>
+<h2>みんなの予想</h2>
 
 <div class="row">
   <div class="span12">
+
+    <h3>スコア予想</h3>
+    <table class="table table-bordered table-hover">
+      <thead>
+        <tr>
+          <td></td>
+          <td style="text-align:center; border-left: solid 1px #ddd;">結果</td>
+          <% @users.each do |user| %>
+            <td style="text-align:center; border-left: solid 1px #ddd; font-size:12px;"><%=user.name%></td>
+          <% end %>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td style="text-align:center;">
+            <img src="../img/brazil.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;
+            <img src="../img/uruguay.jpg" style="width:40px;height;30px;">
+          </td>
+          <td style="text-align:center;">　-　</td>
+          <% @users.each do |user| %>
+            <td style="text-align:center; border-left: solid 1px #ddd;">
+              <%= user.part_three_predict.score_a %>&nbsp;-&nbsp;
+              <%= user.part_three_predict.score_b %>
+            </td>
+          <% end %>
+        </tr>
+        <tr>
+          <td style="text-align:center;">
+            <img src="../img/spain.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;
+            <img src="../img/italia.jpg" style="width:40px;height;30px;">
+          </td>
+          <td style="text-align:center;">　-　</td>
+          <% @users.each do |user| %>
+            <td style="text-align:center; border-left: solid 1px #ddd;">
+              <%= user.part_three_predict.score_c %>&nbsp;-&nbsp;
+              <%= user.part_three_predict.score_d %>
+            </td>
+          <% end %>
+        </tr>
+        <tr>
+          <td style="text-align:center;">
+            3rd place match 
+          </td>
+          <td style="text-align:center;">　-　</td>
+          <% @users.each do |user| %>
+            <td style="text-align:center; border-left: solid 1px #ddd;">
+              <%= user.part_three_predict.score_e %>&nbsp;-&nbsp;
+              <%= user.part_three_predict.score_f %>
+            </td>
+          <% end %>
+        </tr>
+        <tr>
+          <td style="text-align:center;">
+            final
+          </td>
+          <td style="text-align:center;">　-　</td>
+          <% @users.each do |user| %>
+            <td style="text-align:center; border-left: solid 1px #ddd;">
+              <%= user.part_three_predict.score_e %>&nbsp;-&nbsp;
+              <%= user.part_three_predict.score_f %>
+            </td>
+          <% end %>
+        </tr>
+      </tbody>
+    </table>
+
+    <h3>優勝・準優勝・３位</h3>
     <table class="table table-bordered table-hover">
       <thead>
         <tr>
