--- a/app/views/part_three_predicts/overlook.html.erb
+++ b/app/views/part_three_predicts/overlook.html.erb
@@ -42,7 +42,14 @@
           </td>
           <td style="text-align:center;">　-　</td>
           <% @users.each do |user| %>
-            <td style="text-align:center; border-left: solid 1px #ddd;">
+            <% hit_status = PartThreePredict.hit_status(user.id, 2) %>
+            <% if hit_status == "hit" %>
+              <td style="text-align:center; border-left: solid 1px #ddd; background:#98fb98">
+            <% elsif hit_status == "just" %>
+              <td style="text-align:center; border-left: solid 1px #ddd; background:#ff8e8e">
+            <% else %>
+              <td style="text-align:center; border-left: solid 1px #ddd;">
+            <% end %>
               <%= user.part_three_predict.score_c %>&nbsp;-&nbsp;
               <%= user.part_three_predict.score_d %>
             </td>
@@ -50,7 +57,8 @@
         </tr>
         <tr>
           <td style="text-align:center;">
-            <img src="../img/uruguay.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;　　　
+            <img src="../img/uruguay.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;
+            <img src="../img/italia.jpg" style="width:40px;height;30px;">
           </td>
           <td style="text-align:center;">　-　</td>
           <% @users.each do |user| %>
@@ -62,7 +70,8 @@
         </tr>
         <tr>
           <td style="text-align:center;">
-            <img src="../img/brazil.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;　　　
+            <img src="../img/brazil.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;
+            <img src="../img/spain.jpg" style="width:40px;height;30px;">
           </td>
           <td style="text-align:center;">　-　</td>
           <% @users.each do |user| %>
