--- a/app/views/part_three_predicts/overlook.html.erb
+++ b/app/views/part_three_predicts/overlook.html.erb
@@ -40,7 +40,7 @@
             <img src="../img/spain.jpg" style="width:40px;height;30px;">&nbsp;-&nbsp;
             <img src="../img/italia.jpg" style="width:40px;height;30px;">
           </td>
-          <td style="text-align:center;">　-　</td>
+          <td style="text-align:center;">1 - 0</td>
           <% @users.each do |user| %>
             <% hit_status = PartThreePredict.hit_status(user.id, 2) %>
             <% if hit_status == "hit" %>
