--- a/app/views/part_three_predicts/_form.html.erb
+++ b/app/views/part_three_predicts/_form.html.erb
@@ -53,8 +53,8 @@
       <h3>３位決定戦</h3>
       <h3>
         <img src="../../img/uruguay.jpg" style="width:60px;height:40px;">&nbsp;ウルグアイ
-        <%= f.number_field :score_e, :style => "width:80px;", :disabled => false %>&nbsp;ー&nbsp;
-        <%= f.number_field :score_f, :style => "width:80px;", :disabled => false %>
+        <%= f.number_field :score_e, :style => "width:80px;", :disabled => true %>&nbsp;ー&nbsp;
+        <%= f.number_field :score_f, :style => "width:80px;", :disabled => true %>
         イタリア&nbsp;<img src="../../img/italia.jpg" style="width:60px;height:40px;">
       </h3>
       <br/>
@@ -62,8 +62,8 @@
       <h3>決勝戦</h3>
       <h3>
         <img src="../../img/brazil.jpg" style="width:60px;height:40px;">&nbsp;ブラジル
-        <%= f.number_field :score_g, :style => "width:80px;", :disabled => false %>&nbsp;ー&nbsp;
-        <%= f.number_field :score_h, :style => "width:80px;", :disabled => false %>
+        <%= f.number_field :score_g, :style => "width:80px;", :disabled => true %>&nbsp;ー&nbsp;
+        <%= f.number_field :score_h, :style => "width:80px;", :disabled => true %>
         スペイン&nbsp;<img src="../../img/spain.jpg" style="width:60px;height:40px;">
       </h3>
       <br/>
